apps/sonarr/deployment.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
    version: v1
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
      version: v1
  template:
    metadata:
      labels:
        app: sonarr
        version: v1
    spec:
      containers:
      - name: sonarr
        # IMAGE=ghcr.io/linuxserver/sonarr; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | grep -F 'version-4' | sort -V | tail -n1 >&2 | tee | pbcopy
        image: ghcr.io/linuxserver/sonarr:version-4.0.19.2979
        ports:
        - name: http
          containerPort: 8989
        livenessProbe:
          httpGet:
            port: http
            path: /ping
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: scratch
          mountPath: /downloads
          subPath: downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-nas1-mtank
      - name: scratch
        persistentVolumeClaim:
          claimName: scratch
      - name: media
        persistentVolumeClaim:
          claimName: media
