apps/sonarr/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app: sonarr
    version: v1
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
      version: v1
  template:
    metadata:
      labels:
        app: sonarr
        version: v1
    spec:
      containers:
      - name: sonarr
        # IMAGE=ghcr.io/linuxserver/sonarr; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | sort -V | tail -n1
        # image: ghcr.io/linuxserver/sonarr:version-4.0.15.2941
        image: alpine
        command: [ "sleep" ]
        args: [ "infinity" ]

        ports:
        - name: http
          containerPort: 8989
        # startupProbe:
        #   httpGet:
        #     port: http
        #     path: /
        #   periodSeconds: 10
        #   failureThreshold: 30

        volumeMounts:
        - name: sonarr
          subPath: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: scratch
          mountPath: /downloads
          subPath: downloads

      volumes:
      - name: sonarr
        persistentVolumeClaim:
          claimName: config
      - name: scratch
        persistentVolumeClaim:
          claimName: scratch
      - name: media
        persistentVolumeClaim:
          claimName: media
