apps/sonarr/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: majestic-fear.radoncanyon.com
spec:
  parentRefs:
  - name: private
    namespace: envoy-gateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - majestic-fear.radoncanyon.com
  rules:
  - backendRefs:
    - name: sonarr
      port: 80
      group: ''
      kind: Service
      weight: 1
