apps/sonarr/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr-ingress
spec:
  endpointSelector:
    matchLabels:
      app: sonarr
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: envoy-gateway-system
        app.kubernetes.io/component: proxy
        app.kubernetes.io/managed-by: envoy-gateway
    toPorts:
    - ports:
      - port: "8989"
        protocol: TCP
  - fromEntities:
    - host
